# python-template

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pre-commit-config.yaml  pyproject.toml  setup.cfg  setup.py
docs/: index.md
src/foo/: __init__.py
tests/: test_sample.py
