[tool.poetry]
name = "PROJECT"
version = "0.1.0"
description = "DESCRIPTION"
authors = ["Joe User <joe.user@fontys.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv -ra -q"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
filterwarnings = "ignore"
norecursedirs = "docs build"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
