[tool.poetry]
name = "PROJECT"
version = "0.1.0"
description = "DESCRIPTION"
authors = ["Joe User <joe.user@fontys.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.8.0"
pytest = "8.3.2"
ruff = "0.9.7"
pre-commit-update = "0.6.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv -ra -q"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
filterwarnings = "ignore"
norecursedirs = "docs build"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
exclude = ["*.ipynb"]

[tool.pre-commit-update]
dry_run = true
all_versions = false
verbose = true
warnings = true
preview = false
jobs = 10
keep = ["ruff"]
bleeding_edge = ["pylint"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
